# Deep-Phase

./: README.md  pyproject.toml
src/deep_phase/: __main__.py  train.py
src/deep_phase/datasets/: bioio_image_dataset.py
src/deep_phase/models/: modified_resnet.py
src/deep_phase/utils/: data_operations.py  plot_samples.py  plotting.py
